@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-07-16T08:17:52Z",
+  "timestamp" : "2022-07-16T16:18:53Z",
   "count_outdated" : 393,
   "uniques_outdated" : 226,
-  "count" : 425,
-  "uniques" : 244,
+  "count" : 424,
+  "uniques" : 243,
   "clones" : [
     {
       "timestamp": "2022-07-02T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
