@@ -1,11 +1,11 @@
 {
-  "count": 32,
+  "count": 31,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-07-02T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-07-03T00:00:00Z",
