@@ -1,3 +1,10 @@
+2022-07-16T16:18:53Z:
+* notice: last 14d: unq all: 4 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 226 393 / 244 425
+* notice: next accum: outdated-unq outdated-all / unq all: 226 393 / 243 424
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-02]
+
 2022-07-16T08:17:52Z:
 * notice: last 14d: unq all: 4 32
 * notice: prev accum: outdated-unq outdated-all / unq all: 226 393 / 243 424
